# arm-rtos-rs

./: .clangd  Cargo.toml  LICENSE  Makefile  book.md  readme.md  rust-toolchain.toml
.cargo/: config.toml
demo/: Cargo.toml  build.rs  common.x  mps2_an385.x
demo/src/: cortex_m.rs  cortex_m_rt.rs  critical_section.rs  device.rs  entry.rs  errno.rs  fork.rs  io.rs  kernel.rs  loadable.rs  main.rs  mps2_an385.rs  serial_utils.rs  shell.rs  signal.rs  syscalls.rs  systick.rs  task.rs  threading.rs  userspace.rs
demo/src/mps2_an385/: mod.rs  systick.rs  uart.rs
kernel/: Cargo.toml  build.rs  mps2_an385.x  mps2_an38x.x
kernel/src/: lib.rs  list.rs  serial.rs  serial_utils.rs  stdio.rs  timer.rs
kernel/src/cortex_m/: arch.rs  arm.rs  cortex_m_rt.rs  cpu.rs  critical_section.rs  interrupts.rs  irqn.rs  mod.rs  nvic.rs  scb.rs  systick.rs
kernel/src/kernel/: errno.rs  idle.rs  kernel.rs  mod.rs  stack.rs  syscalls.rs  thread.rs  threading.rs  timeout.rs  userspace.rs
kernel/src/kernel/elf_loader/: entry.rs  loader.rs  mod.rs  section.rs
kernel/src/kernel/sync/: kobj.rs  mod.rs  mutex.rs  sem.rs  signal.rs  swap_data.rs  sync.rs  traits.rs
kernel/src/list/: doubly_linked.rs  mod.rs  singly_linked.rs
kernel/src/mem/: alloc.rs  mod.rs  pool.rs  region.rs
kernel/src/soc/: mod.rs
kernel/src/soc/mps2_an385/: mod.rs
res/: armv7-unknown-eabihf.config
samples/: .gitignore  Makefile  arm-rust-rs.h  build.sh  compile_commands.json  hello_world.c  helpers.h  libc.c  libc.h  libuser.c  libuser.h
scripts/: .clang-format  disassemble.sh  qemu-runner.sh
