[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[features]
default = ["mps2-an385"]
mps2-an385 = []

[dependencies]
volatile-register = "0.2.2"
# mps2_an385 ={ path = "../mps2_an385" }

# critical-section = "1.0.0"
# bitfield = "0.15.0"
# eh0 = { package = "embedded-hal", version = "1.0.0", optional = true }
# eh1 = { package = "embedded-hal", version = "1.0.0" }
