[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[features]
default = ["systick", "mps2-an385"]
systick = []
mps2-an385 = []

[dependencies]
volatile-register = "0.2.2"
bitfield = "0.16.0"

# contains definitions to cortex m registers
cortex-m = "0.7.7"

# mps2_an385 ={ path = "../mps2_an385" }

# critical-section = "1.0.0"
# bitfield = "0.15.0"
# eh0 = { package = "embedded-hal", version = "1.0.0", optional = true }
# eh1 = { package = "embedded-hal", version = "1.0.0" }
