[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel = { path = "../kernel", features = ["mps2-an385"]}
cortex-m = "0.7.7"

# critical-section = "1.0.0"
# bitfield = "0.15.0"
# eh0 = { package = "embedded-hal", version = "1.0.0", optional = true }
# eh1 = { package = "embedded-hal", version = "1.0.0" }

[features]
default = ["signal"]
signal = []
shell = []
