[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[features]
default = ["mps2-an386"]
mps2-an385 = ["cm3"]
mps2-an386 = ["cm4"]
cm3 = []
cm4 = []
kernel-debug = []
kernel-stats = []

[dependencies]
num-traits = { version =  "0.2", default-features = false}
num-derive = { version =  "0.4", default-features = false}

volatile-register = "0.2.2"
bitfield = "0.16.0"
